[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/OptionsMenu/Video/VideoOptionsMenu.gd" type="Script" id=1]

[node name="Video" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 362.0
margin_top = 280.0
margin_right = 662.0
margin_bottom = 320.0
rect_min_size = Vector2( 300, 0 )

[node name="FullscreenControl" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="FullscreenLabel" type="Label" parent="VBoxContainer/FullscreenControl"]
margin_top = 13.0
margin_right = 220.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Fullscreen :"

[node name="FullscreenButton" type="CheckButton" parent="VBoxContainer/FullscreenControl"]
margin_left = 224.0
margin_right = 300.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="VBoxContainer/FullscreenControl/FullscreenButton" to="." method="_on_FullscreenButton_toggled"]
